src/test/deca/context/invalid/class/39_wrong_argument_type.deca
// Description:
//    Appel d'une méthode avec les mauvais type de paramètres
//
// Resultats:
//    undefined method

class A {
	void a(int a) {}
}

{
	A a;
	float b;
	a.a(b);
}

